2006-04-24    <mschimek@users.sf.net>

	* src/frequencies.c, src/strnatcmp.h, src/strnatcmp.c:
	  strnatcmp no longer used, files removed.
	* src/error_console.c: No longer used, file removed.

	* configure.in (ALL_LINGUAS): Added ja.
	* po/ja.po: New Japanese translation contributed by Hiroshi Hasebe.

2006-04-12    <mschimek@users.sf.net>

	* src/tveng25.c (get_capabilities): Added a no-overlay test.
	* src/main.c (restore_last_capture_mode): Disable capture or overlay
	  GUI elements if the device does not support it. Try capture OR
	  overlay if the old mode is unsupported.
	(main): Do not disable fullscreen GUI if overlay has been disabled
	  because we now have fullscreen ttx and capture.

	* src/frequencies.c (frequency_tables): Added UPC NL.

	* plugins/deinterlace/test/Makefile.am (ditest_LDADD): Added
	  libtv.la which defines various SIMD constants.
	* test/simd.c, plugins/deinterlace/test/ditest.c,
	  plugins/deinterlace/main.c, plugins/deinterlace/ditest.c:
	  Removed include simd-consts.h, they're now defined in libtv.a.
	* libtv/simd-consts.h: Replaced by simd.c.

	* test/simd.c, plugins/deinterlace/DI_Misc/Makefile.am,
	  plugins/deinterlace/DI_Misc/DI_Weave.c,
	  plugins/deinterlace/DI_Misc/DI_VideoWeave.c, 
	  plugins/deinterlace/DI_Misc/DI_VideoBob.c,
	  plugins/deinterlace/DI_Misc/DI_TwoFrame.c,
	  plugins/deinterlace/DI_Misc/DI_TomsMoComp.c,
	  plugins/deinterlace/DI_Misc/DI_ScalerBob.c,
	  plugins/deinterlace/DI_Misc/DI_OldGame.c,
	  plugins/deinterlace/DI_Misc/DI_OddOnly.c,
	  plugins/deinterlace/DI_Misc/DI_MoComp2.c,
	  plugins/deinterlace/DI_Misc/DI_Greedy2Frame.c,
	  plugins/deinterlace/DI_Misc/DI_Greedy.c,
	  plugins/deinterlace/DI_Misc/DI_EvenOnly.c,
	  plugins/deinterlace/DI_Misc/DI_Bob.c,
	  plugins/deinterlace/DI_GreedyH/Makefile.am,
	  plugins/deinterlace/DI_GreedyH/DI_GreedyHMPulldown.c,
	  plugins/deinterlace/DI_GreedyH/DI_GreedyHM.c,
	  plugins/deinterlace/DI_GreedyH/DI_GreedyH.c,
	  plugins/deinterlace/windows.h, libtv/rgb2rgb.c,