@@ -2976,9 +2976,11 @@ Iñaki García Etxebarria</property>
   <property name="translator_credits">Guus Bonnema
 Iñaki García Etxebarria
 Joseba García Etxebarria
+Hiroshi Hasebe
 Henrik Isacsson
 Arkadiusz Lipiec
 Christian Marillat
+Pavel Mlcoch
 Morten Brix Pedersen
 Paweł Sakowski
 Michael H. Schimek
